--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -17,7 +17,7 @@
         }
       register: disk_space
       ignore_errors: yes
-    
+
     - name: Get Database Space Utilization
       win_shell: |
         try {
@@ -29,12 +29,11 @@
         }
       register: db_space
       ignore_errors: yes
-    
-    
+
     - name: Get Database Health
       win_shell: |
         try {
-          $query = "SELECT db.name AS DatabaseName,db.state_desc AS Status, (SELECT COUNT(*) FROM sys.dm_exec_requests r WHERE r.database_id = db.database_id) AS ActiveRequests,(SELECT COUNT(*) FROM sys.dm_exec_sessions s WHERE s.is_user_process = 1 AND s.database_id = db.database_id) AS ActiveUserConnections,(SELECT COUNT(*) FROM sys.dm_os_waiting_tasks w JOIN sys.dm_exec_sessions s ON w.session_id = s.session_id WHERE s.database_id = db.database_id) AS PendingRequests, (SELECT COUNT(*) FROM sys.dm_os_performance_counters WHERE counter_name = 'Processor Queue Length') AS CPUQueueLength FROM sys.databases db;"
+          $query = "SELECT db.name AS DatabaseName, db.state_desc AS Status, (SELECT COUNT(*) FROM sys.dm_exec_requests r WHERE r.database_id = db.database_id) AS ActiveRequests, (SELECT COUNT(*) FROM sys.dm_exec_sessions s WHERE s.is_user_process = 1 AND s.database_id = db.database_id) AS ActiveUserConnections, (SELECT COUNT(*) FROM sys.dm_os_waiting_tasks w JOIN sys.dm_exec_sessions s ON w.session_id = s.session_id WHERE s.database_id = db.database_id) AS PendingRequests, (SELECT COUNT(*) FROM sys.dm_os_performance_counters WHERE counter_name = 'Processor Queue Length') AS CPUQueueLength FROM sys.databases db;"
           $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | ConvertTo-Json -Compress -Depth 3
           if (-not $result) { Write-Output '[]' } else { Write-Output $result }
         } catch {
@@ -42,6 +41,7 @@
         }
       register: db_health
       ignore_errors: yes
+
     - name: Check for Deadlocks
       win_shell: |
         try {
@@ -53,15 +53,11 @@
         }
       register: deadlocks
       ignore_errors: yes
+
     - name: Get SQL Agent Job Activities
       win_shell: |
         try {
-          $query = "SELECT j.job_id, j.name, j.enabled,
-               MAX(h.run_status) AS last_run_status
-               FROM msdb.dbo.sysjobs j
-               LEFT JOIN msdb.dbo.sysjobhistory h ON j.job_id = h.job_id
-               WHERE h.step_id = 0
-               GROUP BY j.job_id, j.name, j.enabled;"
+          $query = "SELECT j.job_id, j.name, j.enabled, MAX(h.run_status) AS last_run_status FROM msdb.dbo.sysjobs j LEFT JOIN msdb.dbo.sysjobhistory h ON j.job_id = h.job_id WHERE h.step_id = 0 GROUP BY j.job_id, j.name, j.enabled;"
           $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | ConvertTo-Json -Compress -Depth 3
           if (-not $result) { Write-Output '[]' } else { Write-Output $result }
         } catch {
@@ -70,17 +66,10 @@
       register: job_activities
       ignore_errors: yes
 
-    
-    
     - name: Check SQL Server Error Log for Issues
       win_shell: |
         try {
-          $query = @"
-            SELECT TOP 10 logdate, processinfo, text
-            FROM sys.fn_get_audit_file('C:\Program Files\Microsoft SQL Server\MSSQL15.MSSQLSERVER\MSSQL\Log\*.sqlaudit', DEFAULT, DEFAULT)
-            WHERE text LIKE '%error%' OR text LIKE '%failed%' OR text LIKE '%severity%'
-            ORDER BY logdate DESC;
-          "@
+          $query = "SELECT TOP 10 logdate, processinfo, text FROM sys.fn_get_audit_file('C:\Program Files\Microsoft SQL Server\MSSQL15.MSSQLSERVER\MSSQL\Log\*.sqlaudit', DEFAULT, DEFAULT) WHERE text LIKE '%error%' OR text LIKE '%failed%' OR text LIKE '%severity%' ORDER BY logdate DESC;"
           $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | ConvertTo-Json -Compress -Depth 3
           if (-not $result) { Write-Output '[]' } else { Write-Output $result }
         } catch {
@@ -89,8 +78,13 @@
       register: sql_errors
       ignore_errors: yes
 
-    - name: Convert Error Log Output to JSON
+    - name: Convert Outputs to JSON
       set_fact:
+        db_space_fact: "{{ db_space.stdout | default('[]') | from_json }}"
+        db_health_fact: "{{ db_health.stdout | default('[]') | from_json }}"
+        deadlocks_fact: "{{ deadlocks.stdout | default('[]') | from_json }}"
+        job_activities_fact: "{{ job_activities.stdout | default('[]') | from_json }}"
+        disk_space_fact: "{{ disk_space.stdout | default('[]') | from_json }}"
         sql_errors_fact: "{{ sql_errors.stdout | default('[]') | from_json }}"
 
     - name: Display SQL Server Issues and Troubleshooting Suggestions
@@ -125,71 +119,3 @@
           {% else %}
             ✅ No critical errors found in the SQL Server logs.
           {% endif %}
-
-    - name: Convert Outputs to JSON
-      set_fact:
-        db_space_fact: "{{ (db_space.stdout | from_json) if db_space.stdout is not none else [] }}"
-        db_health_fact: "{{ (db_health.stdout | from_json) if db_health.stdout is not none else [] }}"
-        deadlocks_fact: "{{ (deadlocks.stdout | from_json) if deadlocks.stdout is not none else {'Deadlocks': 0} }}"
-        job_activities_fact: "{{ (job_activities.stdout | from_json) if job_activities.stdout is not none else [] }}"
-        disk_space_fact: "{{ disk_space.stdout | default('[]') | from_json }}"
-        db_space_fact: "{{ db_space.stdout | default('[]') | from_json }}"
-    
-    - name: Ensure facts are lists
-      set_fact:
-        disk_space_fact: "{{ disk_space_fact if disk_space_fact is iterable else [] }}"
-        db_space_fact: "{{ db_space_fact if db_space_fact is iterable else [] }}"
-    
-    - name: Display Formatted Results
-      debug:
-        msg: |
-          💾 Disk Space:
-          {% for item in disk_space_fact if item is mapping and 'DeviceID' in item and 'FreeSpace' in item %}
-            - Volume: {{ item.DeviceID }} | Free Space: {{ (item.FreeSpace | int / 1073741824) | round(2) }} GB
-          {% else %}
-            - No valid disk space data available.
-          {% endfor %}
-          
-          
-          📊 Database Space Utilization:
-          {% for item in db_space_fact | default([]) if item.DatabaseName is defined and item.SizeMB is defined %}
-           - {{ item.DatabaseName }}: {{ item.SizeMB }} MB
-          {% endfor %}
-          🚨 Deadlocks:
-          {% if (deadlocks_fact.Deadlocks | default(0) | int) > 0 %}
-           - {{ deadlocks_fact.Deadlocks }} deadlocks detected!
-          {% else %}
-           - No deadlocks detected
-          {% endif %}
-          [ℹ️] Job activities query returned {{ job_activities_fact | default([]) | length }} rows.
-          🛠 SQL Server Agent Job Activities:
-          {% if job_activities_fact.name is defined and job_activities_fact.enabled is defined and job_activities_fact.last_run_status is defined %}
-           - Job: {{ job_activities_fact.name }} | Enabled: {{ job_activities_fact.enabled }} | Last Outcome: 
-             {% if job_activities_fact.last_run_status | default(-1) == 1 %}
-               Succeeded
-             {% elif job_activities_fact.last_run_status | default(-1) == 0 %}
-               Failed
-             {% elif job_activities_fact.last_run_status | default(-1) == 2 %}
-               Retry
-             {% elif job_activities_fact.last_run_status | default(-1) == 3 %}
-               Canceled
-             {% else %}
-               Unknown
-             {% endif %}
-          {% else %}
-            [❌] No job activities found or missing required fields.
-          {% endif %}
-          🩺 Database Health Check:
-          {% if db_health_fact is defined and db_health_fact | length > 0 %}
-            {% for item in db_health_fact | default([]) %}
-               - Database: {{ item.DatabaseName | default([]) }}
-                 - Status: {{ item.Status | default([]) }}
-                 - Active Requests: {{ item.ActiveRequests | default(0) }}
-                 - Active User Connections: {{ item.ActiveUserConnections | default(0) }}
-                 - Pending Requests: {{ item.PendingRequests | default(0) }}
-                 - CPU Queue Length: {{ item.CPUQueueLength | default(0) }}
-            {% endfor %}
-          {% else %}
-            [❌] No database health data available.
-          {% endif %}
-          
