--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -6,6 +6,7 @@
     sql_instance: "10.112.0.10"
     sql_user: "{{ sql_user }}"
     sql_password: "{{ sql_password }}"
+ 
   tasks:
     - name: Get Disk Space Utilization
       win_shell: |
@@ -17,7 +18,7 @@
         }
       register: disk_space
       ignore_errors: yes
-
+ 
     - name: Get Database Space Utilization
       win_shell: |
         try {
@@ -29,7 +30,7 @@
         }
       register: db_space
       ignore_errors: yes
-
+ 
     - name: Get Database Health
       win_shell: |
         try {
@@ -41,7 +42,7 @@
         }
       register: db_health
       ignore_errors: yes
-
+ 
     - name: Check for Deadlocks
       win_shell: |
         try {
@@ -53,7 +54,7 @@
         }
       register: deadlocks
       ignore_errors: yes
-
+ 
     - name: Get SQL Agent Job Activities
       win_shell: |
         try {
@@ -65,7 +66,7 @@
         }
       register: job_activities
       ignore_errors: yes
-
+ 
     - name: Check SQL Server Error Log for Issues
       win_shell: |
         try {
@@ -75,9 +76,8 @@
         } catch {
           Write-Output '[{"Error": "' + $_.Exception.Message + '"}]'
         }
-      register: sql_errors
-      ignore_errors: yes
-
+    
+ 
     - name: Convert Outputs to JSON
       set_fact:
         db_space_fact: "{{ db_space.stdout | default('[]') | from_json }}"
@@ -85,94 +85,26 @@
         deadlocks_fact: "{{ deadlocks.stdout | default('[]') | from_json }}"
         job_activities_fact: "{{ job_activities.stdout | default('[]') | from_json }}"
         disk_space_fact: "{{ disk_space.stdout | default('[]') | from_json }}"
-        sql_errors_fact: "{{ sql_errors.stdout | default('[]') | from_json }}"
-
-    
-
-
+   
  
-    # - name: Display SQL Server Issues and Troubleshooting Suggestions
-    - name: Display Formatted Results
-      debug:
-        msg: |
-          💾 Disk Space:
-          {% for item in disk_space_fact if item is mapping and 'DeviceID' in item and 'FreeSpace' in item %}
-            - Volume: {{ item.DeviceID }} | Free Space: {{ (item.FreeSpace | int / 1073741824) | round(2) }} GB
-          {% else %}
-            - No valid disk space data available.
-          {% endfor %}
-
-          📊 Database Space Utilization:
-          {% for item in db_space_fact | default([]) if item.DatabaseName is defined and item.SizeMB is defined %}
-           - {{ item.DatabaseName }}: {{ item.SizeMB }} MB
-          {% endfor %}
-          🚨 Deadlocks:
-          {% if (deadlocks_fact.Deadlocks | default(0) | int) > 0 %}
-           - {{ deadlocks_fact.Deadlocks }} deadlocks detected!
-          {% else %}
-           - No deadlocks detected
-          {% endif %}
-          [ℹ️] Job activities query returned {{ job_activities_fact | default([]) | length }} rows.
-          🛠 SQL Server Agent Job Activities:
-          {% if job_activities_fact.name is defined and job_activities_fact.enabled is defined and job_activities_fact.last_run_status is defined %}
-           - Job: {{ job_activities_fact.name }} | Enabled: {{ job_activities_fact.enabled }} | Last Outcome: 
-             {% if job_activities_fact.last_run_status | default(-1) == 1 %}
-               Succeeded
-             {% elif job_activities_fact.last_run_status | default(-1) == 0 %}
-               Failed
-             {% elif job_activities_fact.last_run_status | default(-1) == 2 %}
-               Retry
-             {% elif job_activities_fact.last_run_status | default(-1) == 3 %}
-               Canceled
-             {% else %}
-               Unknown
-             {% endif %}
-          {% else %}
-            [❌] No job activities found or missing required fields.
-          {% endif %}
-          🩺 Database Health Check:
+   
+ 
+          🩺 **Database Health Check:**
           {% if db_health_fact is defined and db_health_fact | length > 0 %}
-            {% for item in db_health_fact | default([]) %}
-               - Database: {{ item.DatabaseName | default([]) }}
-                 - Status: {{ item.Status | default([]) }}
-                 - Active Requests: {{ item.ActiveRequests | default(0) }}
-                 - Active User Connections: {{ item.ActiveUserConnections | default(0) }}
-                 - Pending Requests: {{ item.PendingRequests | default(0) }}
-                 - CPU Queue Length: {{ item.CPUQueueLength | default(0) }}
-            {% endfor %}
-          {% else %}
-            [❌] No database health data available.
-          {% endif %}
-    - name: Display SQL Server Issues and Troubleshooting Suggestions
-      debug:
-        msg: |
-          ⚠️ **SQL Server Errors Detected:**
-          {% if sql_errors_fact is defined and sql_errors_fact | length > 0 %}
-            {% for error in sql_errors_fact %}
-              - **Timestamp:** {{ error.logdate | default("N/A") }}
-              - **Process:** {{ error.processinfo | default("N/A") }}
-              - **Error Message:** {{ error.text | default("N/A") }}
-              
-              **🔧 Suggested Troubleshooting Steps:**
-              {% if 'login failed' in error.text | lower %}
-                - Check SQL login credentials.
-                - Verify if the login exists and is enabled (`SELECT * FROM sys.sql_logins`).
-                - Ensure correct authentication mode is set (`SELECT SERVERPROPERTY('IsIntegratedSecurityOnly')`).
-              {% elif 'deadlock' in error.text | lower %}
-                - Identify deadlock victims (`SELECT * FROM sys.dm_tran_locks`).
-                - Review long-running transactions.
-                - Optimize indexing and query performance.
-              {% elif 'severity 17' in error.text | lower %}
-                - Indicates insufficient resources. Check available memory and disk space.
-                - Review running processes with `sys.dm_exec_requests`.
-              {% elif 'severity 20' in error.text | lower %}
-                - Fatal error detected. Check error log for more details.
-                - Restart SQL Server if necessary.
-              {% else %}
-                - Review the error message and check SQL documentation for resolution.
+            {% for item in db_health_fact %}
+              - Database: {{ item.DatabaseName }}
+                - Status: {{ item.Status }}
+              {% if item.Status == "OFFLINE" %}
+                🚨 **ALERT: Database {{ item.DatabaseName }} is OFFLINE!**
+                - Possible reasons:
+                  - Manually taken offline
+                  - Storage or corruption issues
+                  - SQL Server restart
+                - Suggested Fix:
+                  - `ALTER DATABASE {{ item.DatabaseName }} SET ONLINE;`
+                  - Check storage space and error logs
               {% endif %}
             {% endfor %}
           {% else %}
-            ✅ No critical errors found in the SQL Server logs.
+            ❌ No database health data available.
           {% endif %}
-
