--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -86,7 +86,59 @@
         job_activities_fact: "{{ job_activities.stdout | default('[]') | from_json }}"
         disk_space_fact: "{{ disk_space.stdout | default('[]') | from_json }}"
        
+    
+    - name: Display Formatted Results
+      debug:
+        msg: |
+          💾 Disk Space:
+          {% for item in disk_space_fact if item is mapping and 'DeviceID' in item and 'FreeSpace' in item %}
+            - Volume: {{ item.DeviceID }} | Free Space: {{ (item.FreeSpace | int / 1073741824) | round(2) }} GB
+          {% else %}
+            - No valid disk space data available.
+          {% endfor %}
  
+          📊 Database Space Utilization:
+          {% for item in db_space_fact | default([]) if item.DatabaseName is defined and item.SizeMB is defined %}
+           - {{ item.DatabaseName }}: {{ item.SizeMB }} MB
+          {% endfor %}
+          🚨 Deadlocks:
+          {% if (deadlocks_fact.Deadlocks | default(0) | int) > 0 %}
+           - {{ deadlocks_fact.Deadlocks }} deadlocks detected!
+          {% else %}
+           - No deadlocks detected
+          {% endif %}
+          [ℹ️] Job activities query returned {{ job_activities_fact | default([]) | length }} rows.
+          🛠 SQL Server Agent Job Activities:
+          {% if job_activities_fact.name is defined and job_activities_fact.enabled is defined and job_activities_fact.last_run_status is defined %}
+           - Job: {{ job_activities_fact.name }} | Enabled: {{ job_activities_fact.enabled }} | Last Outcome: 
+             {% if job_activities_fact.last_run_status | default(-1) == 1 %}
+               Succeeded
+             {% elif job_activities_fact.last_run_status | default(-1) == 0 %}
+               Failed
+             {% elif job_activities_fact.last_run_status | default(-1) == 2 %}
+               Retry
+             {% elif job_activities_fact.last_run_status | default(-1) == 3 %}
+               Canceled
+             {% else %}
+               Unknown
+             {% endif %}
+          {% else %}
+            [❌] No job activities found or missing required fields.
+          {% endif %}
+          🩺 Database Health Check:
+          {% if db_health_fact is defined and db_health_fact | length > 0 %}
+            {% for item in db_health_fact | default([]) %}
+               - Database: {{ item.DatabaseName | default([]) }}
+                 - Status: {{ item.Status | default([]) }}
+                 - Active Requests: {{ item.ActiveRequests | default(0) }}
+                 - Active User Connections: {{ item.ActiveUserConnections | default(0) }}
+                 - Pending Requests: {{ item.PendingRequests | default(0) }}
+                 - CPU Queue Length: {{ item.CPUQueueLength | default(0) }}
+            {% endfor %}
+          {% else %}
+            [❌] No database health data available.
+          {% endif %}
+          
     - name: Display SQL Server Issues and Troubleshooting Suggestions
       debug:
         msg: |
