--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -139,15 +139,14 @@
             [❌] No database health data available.
           {% endif %}
           
+    
     - name: Display SQL Server Issues and Troubleshooting Suggestions
       debug:
         msg: |
-          🩺 **Database Health Check:**
+          🩺 **Database Health Check: OFFLINE Databases Only**
           {% if db_health_fact is defined and db_health_fact | length > 0 %}
-            {% for item in db_health_fact %}
+            {% for item in db_health_fact if item.Status == "OFFLINE" %}
               - Database: {{ item.DatabaseName }}
-                - Status: {{ item.Status }}
-              {% if item.Status == "OFFLINE" %}
                 🚨 **ALERT: Database {{ item.DatabaseName }} is OFFLINE!**
                 - Possible reasons:
                   - Manually taken offline
@@ -156,8 +155,9 @@
                 - Suggested Fix:
                   - `ALTER DATABASE {{ item.DatabaseName }} SET ONLINE;`
                   - Check storage space and error logs
-              {% endif %}
             {% endfor %}
           {% else %}
-            ❌ No database health data available.
+            ❌ No offline databases detected.
           {% endif %}
+
+     
